[package]
name = "jot"
version = "0.4.0"
authors = ["Olav de Haas <o.n.dehaas@student.tudelft.nl>"]
description = "terminal based digital personal journal📔"
edition = "2018"

keywords = [ "cli", "terminal", "journal", "notebook", "personal" ]
categories = [ "command-line-utilities" ]

repository = "https://github.com/Olavhaasie/jot"
readme = "README.md"
license = "MIT"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[dependencies]
atty = "0.2"
chrono = "0.4"
tempfile = "3"
dirs = "1.0"

[dependencies.clap]
version = "2.32"
features = ["wrap_help"]

[dependencies.rusqlite]
version = "0.15"
features = ["bundled"]

[dev-dependencies]
assert_cmd = "0.10"
