[package]
name = "jot"
version = "0.6.0"
authors = ["Olav de Haas"]
description = "terminal based digital personal journal📔"
edition = "2018"

keywords = [ "cli", "terminal", "journal", "notebook", "personal" ]
categories = [ "command-line-utilities" ]

repository = "https://github.com/Olavhaasie/jot"
readme = "README.md"
license = "MIT"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[dependencies]
atty = "0.2"
ansi_term = "0.11"
chrono = "0.4"
structopt = "0.2"
tempfile = "3"
dirs = "1.0"

[dependencies.rusqlite]
version = "0.16"
features = ["bundled"]

[dev-dependencies]
assert_cmd = "0.11"
