[package]
name = "jot"
version = "0.6.1"
authors = ["Olav de Haas <https://github.com/Olavhaasie>"]
description = "terminal based digital personal journal📔"
edition = "2018"

keywords = [ "cli", "terminal", "journal", "notebook", "personal" ]
categories = [ "command-line-utilities" ]

repository = "https://github.com/Olavhaasie/jot"
readme = "README.md"
license = "MIT"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[dependencies]
atty = "0.2"
ansi_term = "0.12"
chrono = "0.4"
structopt = "0.3"
tempfile = "3"
dirs = "2"

[dependencies.rusqlite]
version = "0.22"
features = ["bundled"]

[dev-dependencies]
assert_cmd = "1"
